--- a/String.prototype.localeCompare().html
+++ b/String.prototype.localeCompare().html
@@ -8,22 +8,27 @@
       font-family: sans-serif;
       line-height: 1.6;
       padding: 20px;
+      padding-bottom: 80px;
       max-width: 800px;
       margin: auto;
+      background-color: #1e1e1e;
+      color: #d4d4d4;
     }
     code {
-      background-color: #f4f4f4;
+      background-color: #2d2d2d;
+      color: #9cdcfe;
       padding: 2px 5px;
       border-radius: 4px;
     }
     pre {
-      background-color: #f4f4f4;
+      background-color: #2d2d2d;
+      color: #dcdcdc;
       padding: 10px;
       border-radius: 4px;
       overflow-x: auto;
     }
     h1, h2 {
-      color: #333;
+      color: #569cd6;
     }
   </style>
 </head>
@@ -73,3 +78,4 @@ arr.sort((a, b) => a.localeCompare(b, 'ru', { sensitivity: 'base' }));
 
 </body>
 </html>
+
