String.prototype.localeCompare().html

--- a/String.prototype.localeCompare().html
+++ b/String.prototype.localeCompare().html
@@ -76,6 +76,19 @@
 arr.sort((a, b) => a.localeCompare(b, 'ru', { sensitivity: 'base' }));
 </pre>
 
+<h2>Значение и преимущества при сортировке</h2>
+<p>
+  Метод <code>localeCompare()</code> особенно полезен при сортировке строк в массивах, так как:
+</p>
+<ul>
+  <li><strong>Учитывает локаль</strong>: позволяет правильно сортировать строки в соответствии с языковыми правилами (например, в немецком и шведском языках буквы с умлаутами имеют разный порядок).</li>
+  <li><strong>Гибкость</strong>: через опции можно контролировать чувствительность к регистру, акцентам и пунктуации.</li>
+  <li><strong>Числовая сортировка</strong>: с опцией <code>numeric: true</code> строки вида <code>"2"</code> и <code>"10"</code> сортируются как числа, а не как строки.</li>
+  <li><strong>Универсальность</strong>: метод работает кроссбраузерно и поддерживается во всех современных JavaScript-движках.</li>
+</ul>
+<p>
+  Это делает <code>localeCompare()</code> предпочтительным способом сортировки строк, особенно если вы работаете с многоязычными данными или пользовательским интерфейсом.
+</p>
+
 </body>
 </html>
-
